stoned af, added logic for health._-> ingame
Currently workings on damages